components/Hero/Hero.scss
@import '../Global/Global.scss';

.slide__link {
    position: relative;
    display: flex;
    width: 100%;
    height: calc(100vh - 172px);
    max-height: 798px;
    color: var(--black);

    &:hover {
        color: var(--black);
        text-decoration: none;
    }
    &::after {
        background: linear-gradient(to top, #000 10%, transparent);
        opacity: 0.8;
        width: 100%;
        position: absolute;
        width: 100%;
        height: 100%;
        content: '';
        z-index: 5;
    }

    @include size('phone') {
        height: 350px;
        border-bottom: solid 3px var(--grey);
    }
    @include size('large-monitor') {
        height: 720px;
    }
    .slide__image {
        width: 100%;
        object-fit: cover;
    }
    .slide__title {
        font-size: 4rem;
    }
}

